# superserve

./: .env.release.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  IMPROVEMENTS_ROUND_2.md  MANIFEST.in  Makefile  PR_TEMPLATE.md  README.md  RELEASING.md  REPOSITIONING-REVIEW.md  biome.json  context7.json  main.py  package.json  pyproject.toml  skills-lock.json  turbo.json
.github/workflows/: ci.yml  cli-publish.yml  docs.yml  fern-generate.yml  homebrew.yml  loops-publish.yml  mcp-publish.yml  release.yml  ts-ci.yml
.husky/: pre-commit
.zed/: settings.json
apps/console/: .env.example  RBAC_PHASE4.md  README.md  biome.json  (+4 more)
cli/: .env.example  .gitignore  README.md  package.json
docs/: README.md  api-key.mdx  authentication.mdx  checkpoints-and-rollback.mdx  checkpoints.mdx  cli.mdx  cloud-agent-api-design.md  deploy.mdx  docs.json  errors.mdx  execution.mdx  files.mdx  index.mdx  introduction.mdx  llms-full.txt  llms.txt  python-sdk.mdx  quickstart.mdx  runtime.mdx  sdk.mdx  sessions.mdx  style.css  troubleshooting.mdx  vms.mdx  zero-config.mdx
examples/: CLAUDE.md
examples/chatbot/: .env.example  README.md  agent.py  pyproject.toml  superserve.yaml
examples/finance-agent/: .env.example  README.md  pyproject.toml
examples/finance-agent/agents/finance/: agent.py  tools.py
fern/: ai_examples_override.yml  docs.yml  fern.config.json  generators.yml  overlay-files.yaml  styles.css
guides/claude/research-agent/python/: orchestrator.py  pyproject.toml
guides/managed-agents/claude-managed-agents/python/: build_template.py  create_environment.py  pyproject.toml
playground/: .env.example  .gitignore  index.html  package.json  vite.config.ts
scripts/: check-docs-nav.ts  configure-docker-desktop.sh  debug-gvisor.sh  install-gvisor-persistent.sh  install-gvisor-vm.sh  setup-gvisor-docker-desktop.sh  setup-gvisor-macos.sh  setup-kind-sandbox.sh  test-sandbox-backend.py
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/docs/: agents.mdx  authentication.mdx  errors.mdx  events.mdx  examples.mdx  index.mdx  metrics.mdx  mint.json  runs.mdx
sdk/python/docs/api-reference/: overview.mdx
sdk/python/docs/api-reference/agents/: agent-model.mdx  create-agent.mdx  delete-agent.mdx  get-agent.mdx  list-agents.mdx  update-agent.mdx
sdk/python/docs/api-reference/auth/: auth-provider.mdx  get-api-key.mdx  load-credentials.mdx  save-credentials.mdx
sdk/python/docs/api-reference/client/: superserve-sync.mdx  superserve.mdx
sdk/python/docs/api-reference/errors/: api-error.mdx  authentication-error.mdx  not-found-error.mdx  rate-limit-error.mdx  superserve-error.mdx  validation-error.mdx
sdk/python/docs/api-reference/events/: base-event.mdx  message-delta-event.mdx  run-completed-event.mdx  run-failed-event.mdx  run-started-event.mdx  tool-end-event.mdx  tool-start-event.mdx
sdk/python/docs/api-reference/metrics/: metrics-collector.mdx  run-metrics.mdx  tool-metrics.mdx
sdk/python/docs/api-reference/runs/: cancel-run.mdx  get-run.mdx  list-runs.mdx  run-model.mdx  run.mdx  stream.mdx
sdk/python/src/superserve_sdk/: __init__.py  _sync.py  auth.py  client.py  constants.py  events.py  exceptions.py  metrics.py  models.py
sdk/python/tests/: __init__.py  conftest.py  test_agents.py  test_auth.py  test_client.py  test_events.py  test_metrics.py  test_models.py  test_runs.py  test_sync.py
spec/: 2026-04-02-design-system-update-plan.md  2026-04-02-design-system-update.md  2026-04-04-api-integration-design.md  2026-04-04-api-integration-plan.md  2026-04-05-radix-to-baseui-migration-design.md  2026-04-05-radix-to-baseui-migration-plan.md  2026-04-07-sandbox-command-runner.md  2026-04-08-table-row-animations-design.md  2026-04-08-table-row-animations-plan.md  2026-04-08-web-terminal-design.md  2026-04-08-web-terminal-plan.md  2026-04-09-audit-logs-date-filter-design.md  2026-04-09-auth-pages-redesign-design.md  2026-04-09-auth-pages-redesign-plan.md  2026-04-09-fern-sdk-docs-design.md  2026-04-09-fern-sdk-docs-plan.md  2026-04-09-noise-background-design.md  2026-04-16-sdk-fern-files-overlay-design.md  2026-04-16-sdk-from-scratch-design.md  2026-04-16-sdk-from-scratch-plan.md  2026-04-20-console-templates-section-design.md  2026-04-20-console-templates-section-plan.md  2026-04-24-templates-sdk-docs-design.md  2026-04-24-templates-sdk-docs-plan.md  2026-05-27-console-color-refresh-design.md  2026-05-27-console-color-refresh-plan.md  2026-05-28-repo-simplification-and-removal-audit.md  2026-06-16-agent-framework-integrations-research.md  2026-06-16-cloud-coding-agents-linear-backlog.md  2026-06-16-cloud-coding-agents-market-research.md  2026-06-17-admin-impersonation-design.md  2026-06-17-admin-impersonation-plan.md  2026-06-18-mcp-server-design.md  2026-06-18-superserve-sdk-skill-design.md  2026-06-19-sandbox-file-manager.md  2026-06-20-backward-compatible-directory-listing-design.md  2026-06-23-mcp-launch-runbook.md  2026-06-23-mcp-tier1-hosted.md  2026-06-24-langchain-langgraph-integration-research.md  2026-06-24-langchain-superserve-implementation-plan.md  (+6 more)
src/rayai/cli/templates/agent/: README.md  pyproject.toml
src/superserve/cli/templates/agent/: .env.example  README.md  pyproject.toml
src/superserve/cli/templates/agent/agents/: .gitkeep
tests/: CLAUDE.md  __init__.py  conftest.py  test_adapters.py  test_batch_tool.py  test_cli_integration.py  test_code_interpreter.py  test_deploy_cli.py  test_e2e_sessions.py  test_integration.py  test_langchain_with_langchain_tools.py  test_mcp_cli.py  test_parallel_tool_calls.py  test_platform.py  test_pydantic_with_langchain_tools.py  test_run_cli.py  test_sandbox.py  test_sdk.py  test_serve.py  test_session_basics.py  test_session_cli.py  test_session_history.py  test_session_tools.py  test_tool_adapters.py  test_tool_decorator.py  test_utils.py
tests/sdk-e2e-py/: README.md  _helpers.py  conftest.py  package.json  pyproject.toml  test_async.py  test_exec.py  test_files.py  test_sandboxes.py  test_system.py  test_templates.py
(+874 files in other folders)
