[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ray"
version = "0.1.0"  # Production PyPI version - TestPyPI is at 0.1.5 currently
description = "Experimental API to run LLM Agents (LangGraph, CrewAI, etc.) on Ray"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "ray[serve]>=2.49.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "click>=8.0.0",
    "pydantic-ai-slim[openai]>=1.27.0",
]

[project.scripts]
rayai = "rayai.cli:main"

[project.optional-dependencies]
sandbox = [
    "docker>=7.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "docker>=7.0.0",  # Needed for sandbox tests
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rayai.cli" = ["templates/**/*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"examples/analyzer/token_efficient_agent/agent.py" = ["E402"]  # imports after sys.path modification

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["examples/"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_openai.*",
    "langchain_core.*",
    "langgraph.*",
    "docker.*",
    "requests.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# Disable attr-defined errors for Ray's @ray.remote decorator
# which dynamically adds .remote() method
disable_error_code = ["attr-defined"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "rayai.examples.*"
# Disable attr-defined errors for Ray's @ray.remote decorator
# which dynamically adds .remote() method
disable_error_code = ["attr-defined"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "examples.*"
# Examples use Ray's dynamic APIs which return Any types
disable_error_code = ["attr-defined", "no-any-return", "arg-type", "union-attr", "operator", "assignment"]
warn_return_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
