[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superserve"

version = "0.1.3"
description = "CLI and SDK for Superserve hosted agent infrastructure"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["agents", "ai", "llm", "hosted", "cli", "sdk"]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "posthog>=3.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://superserve.ai"
Repository = "https://github.com/superserve-ai/superserve"

[project.scripts]
superserve = "superserve.cli:main"

[project.optional-dependencies]
sandbox = [
    "docker>=7.0.0",
    "ray[serve]",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pydantic>=2.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "types-PyYAML>=6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"superserve.cli" = ["templates/**/*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"examples/analyzer/token_efficient_agent/agent.py" = ["E402"]  # imports after sys.path modification

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
exclude = ["src/superserve/sandbox/"]
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "ray.*",
    "requests.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
