[project]
name = "chatbot"
version = "0.1.0"
description = "Minimal chatbot built with Claude Agent SDK and Superserve"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "superserve>=0.1.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
