[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "An AI agent project built with superserve"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "superserve",
    "anyio>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
